Fix #30254: VSE: no red warning border on metastrips with Extend (E)